[Fix] z-index

--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,6 +1,6 @@
 .section {
   position: fixed;
-  z-index: 11;
+  z-index: 12;
   width: 100%;
   height: 104px;
   display: flex;
